Fixed some layout issues and mergin favorite page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,7 @@ $rose-color: #F65A5A;
 $light-gray: #C1C1C1;
 
 $padding-screen: 1.5em;
-$icon: 40px;
+$icon: 28px;
 $icon-lg: 15vh;
 $logo-lg: 35vh;
 
@@ -29,7 +29,7 @@ h1, h2, h3, label {
 }
 
 h1 {
-    font-size: 2.2em;
+    font-size: 1.6em;
 }
 
 .text-body{
@@ -45,6 +45,7 @@ h1 {
     grid-template-columns: [left] $padding-screen [le] auto [middle] $padding-screen [right];
     grid-template-rows: [top] 5vh [bs] 5vh [es] auto [middle] 4.3em [bottom] 5vh [end];
     overflow: hidden;
+    overflow-y: scroll;
 
     &.screen-language {
         grid-template-rows: [top] 5vh [bs] 5vh [es] 30vh [mid] auto [middle] 5vh [bottom] 5vh [end];
@@ -52,6 +53,26 @@ h1 {
 
     &.screen-login {
         grid-template-rows: [top] 5vh [bs] 5vh [es] 15vh [mid] auto [middle] 5vh [bottom] 5vh [end];
+    }
+
+    .top {
+        grid-column: left/right;
+        grid-row: top;
+        height: fit-content;
+        padding: 5vh 5vw 0.5em;
+        background-color: white;
+
+        h1 {
+            font-size: 2.3em;
+            text-align: center;
+        }
+    }
+
+    .content {
+        padding: 3em $padding-screen 1em;
+        grid-column: left/right;
+        grid-row: es/middle;
+        overflow-y: scroll;
     }
 
     .menu {
@@ -152,6 +173,7 @@ h1 {
             }
 
             .kangoo {
+                position: relative;
                 width: 10em;
                 margin: 0;
                 right: 0;
@@ -193,7 +215,7 @@ h1 {
 
         .form-content {
             position: relative;
-            top: calc(-2em - #{$icon-lg} / 2);
+            margin-top: calc(-2em - #{$icon-lg} / 2);
         }
 
         .avatar {
@@ -269,10 +291,9 @@ h1 {
         }
 
         .btn-next{
-            position: absolute;
             bottom: 0;
             font-size: 2.5em;
-            margin-top: 1em;
+            margin-top: auto;
             min-width: 195px;
             line-height: unset;
         }
@@ -295,6 +316,10 @@ h1 {
     .icon {
         width: $icon;
         height: $icon;
+    }
+
+    .shift-to-top {
+        margin-top: -3em!important;
     }
 
     .icon-lg {
